# eigen-graph

./: .gitignore  README.md  be.yml
be-eigen-graph/: Be.dev.dockerfile  Cargo.toml  README.md
be-eigen-graph/docs/postman/: eigen-graph.postman_collection.json
be-eigen-graph/migrations/20250926_000001_create_operator_tables/: down.sql  up.sql
be-eigen-graph/migrations_timescale/: 20250928_000001_init.sql  20250929_000002_stream_cursors.sql
be-eigen-graph/src/: app.rs  config.rs  lib.rs  main.rs  metrics.rs  state.rs
be-eigen-graph/src/api/: mod.rs
be-eigen-graph/src/api/subgraph/: client.rs  errors.rs  mod.rs  queries.rs
be-eigen-graph/src/caching/: redis.rs
be-eigen-graph/src/handlers/: mod.rs  operators_cached_handler.rs  operators_handler.rs
be-eigen-graph/src/models/: cached.rs  ids.rs  mod.rs  operator.rs  operators_aggr.rs  operators_snapshot.rs  strategy.rs  subgraph.rs  time.rs  token.rs
be-eigen-graph/src/payloads/: operators.rs
be-eigen-graph/src/repositories/: operators.rs
be-eigen-graph/src/routes/: mod.rs  operators.rs  operators_cached.rs  ping.rs  v1.rs
be-eigen-graph/src/services/: mod.rs
be-eigen-graph/src/services/mappers/: mod.rs  operators_snapshot.rs
be-eigen-graph/src/services/operators/: mod.rs  operators_aggregates_cached.rs  operators_cache.rs  operators_fetcher.rs  operators_filter.rs  operators_mapper.rs  operators_repo.rs  operators_snapshot_cached.rs  snapshot.rs
be-eigen-graph/src/stream/: db.rs  mod.rs  poller.rs  runner.rs  state.rs  subgraph.rs  ws.rs
be-stream/: Cargo.toml  README.md
(+81 files in other folders)
