[package]
name = "be-eigen-graph"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
dotenvy = "0.15.7"
reqwest = { version = "0.12.23", features = ["json"] }
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["full"] }
num-bigint = "0.4.6"
num-traits = "0.2.19"
futures = "0.3.31"
anyhow = "1.0.100"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-rustls", "macros", "migrate", "chrono", "uuid", "bigdecimal", "json"] }
